[package]
name = "ferrissay"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of cowsay"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matsixfive/crabsay"
readme = "README.md"
homepage = "https://github.com/matsixfive/crabsay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textwrap = "0.16.0"
