[package]
name = "ferrissay"
version = "0.1.1"
edition = "2021"
description = "A Rust implementation of cowsay"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matsixfive/crabsay"
readme = "README.md"
homepage = "https://github.com/matsixfive/crabsay"

[dependencies]
textwrap = "0.16.0"
